{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 241,
  "lineage": "695cc071-1f91-e5d8-6531-816cd64c39e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "iac-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02437d151dd646b04",
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:elastic-ip/eipalloc-02437d151dd646b04",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0339da6a0b0f1f68e",
            "domain": "vpc",
            "id": "eipalloc-02437d151dd646b04",
            "instance": "i-054ffea0d86db5644",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-079c25e67b23c1b9a",
            "private_dns": "ip-10-0-1-50.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-35-76-95-12.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.76.95.12",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.iac-instance",
            "aws_internet_gateway.iac-gateway",
            "aws_network_interface.iac-nw-interface",
            "aws_security_group.iac-security-group",
            "aws_subnet.iac-subnet",
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "iac-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03598bf9d15814511",
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:instance/i-054ffea0d86db5644",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054ffea0d86db5644",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iac-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-079c25e67b23c1b9a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-079c25e67b23c1b9a",
            "private_dns": "ip-10-0-1-50.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e42cb3e787cc4aa9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035f6d87292a40f4a",
            "tags": {
              "Name": "iac-instance"
            },
            "tags_all": {
              "Name": "iac-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ad538de5a279f04"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.iac-nw-interface",
            "aws_security_group.iac-security-group",
            "aws_subnet.iac-subnet",
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iac-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:internet-gateway/igw-0efaaff15dd677b73",
            "id": "igw-0efaaff15dd677b73",
            "owner_id": "366054616193",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "iac-gateway"
            },
            "tags_all": {
              "Name": "iac-gateway"
            },
            "vpc_id": "vpc-0a9cc45ffa51a4513"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "iac-nw-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:network-interface/eni-079c25e67b23c1b9a",
            "id": "eni-079c25e67b23c1b9a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:21:12:75:f7:63",
            "owner_id": "366054616193",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-05ad538de5a279f04"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035f6d87292a40f4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.iac-security-group",
            "aws_subnet.iac-subnet",
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iac-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:route-table/rtb-0bb25cb5b908ec009",
            "id": "rtb-0bb25cb5b908ec009",
            "owner_id": "366054616193",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efaaff15dd677b73",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efaaff15dd677b73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac-route-table"
            },
            "tags_all": {
              "Name": "iac-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9cc45ffa51a4513"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.iac-gateway",
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iac-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070aa44681ab0e5e1",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0bb25cb5b908ec009",
            "subnet_id": "subnet-035f6d87292a40f4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.iac-gateway",
            "aws_route_table.iac-route-table",
            "aws_subnet.iac-subnet",
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "iac-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:security-group/sg-05ad538de5a279f04",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ad538de5a279f04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "iac-security-group",
            "name_prefix": "",
            "owner_id": "366054616193",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iac-security-group"
            },
            "tags_all": {
              "Name": "iac-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9cc45ffa51a4513"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:subnet/subnet-035f6d87292a40f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035f6d87292a40f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366054616193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "iac-subnet"
            },
            "tags_all": {
              "Name": "iac-subnet"
            },
            "vpc_id": "vpc-0a9cc45ffa51a4513"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iac-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:subnet/subnet-0e2ea24f3ff9fe8de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2ea24f3ff9fe8de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "366054616193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "iac-subnet2"
            },
            "tags_all": {
              "Name": "iac-subnet2"
            },
            "vpc_id": "vpc-0a9cc45ffa51a4513"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iac-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iac-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:366054616193:vpc/vpc-0a9cc45ffa51a4513",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c18d3bd15ffe387",
            "default_route_table_id": "rtb-08b714dcf60832090",
            "default_security_group_id": "sg-0210b53dbb1e42282",
            "dhcp_options_id": "dopt-0d5d1a0cfdf601c11",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9cc45ffa51a4513",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b714dcf60832090",
            "owner_id": "366054616193",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "iac-vpc"
            },
            "tags_all": {
              "Name": "iac-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}